<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snapsound.LogInActivity"
    tools:ignore="MergeRootFrame" >

     <EditText
         android:id="@+id/userNameLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:ems="10"
         android:hint="@string/userName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameLogin"
        android:layout_below="@+id/userNameLogin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/signUpEditText" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordLogin"
        android:layout_below="@+id/passwordLogin"
        android:layout_marginTop="41dp"
        android:text="@string/logInButton" />


</RelativeLayout>
