<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.snapsound.SignUpActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/userNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/userName" />

    <EditText
        android:id="@+id/passwordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailSignUp"
        android:layout_below="@+id/userNameSignUp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameSignUp"
        android:layout_below="@+id/passwordSignup"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/SignUpbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/signUpButton" />

</RelativeLayout>